# autolighthouse

./: .gitignore  README.md  config.yaml  creds.env  fix_run.py  headers.json  main.py  poetry_pyproject.toml  pyproject.toml  run.py  todo.txt  with_h.jsonl  without_h.jsonl
src/: config.py  lighthouse.py  loger.py
