[project]
name = "autolighthouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "classic-scheduler (>=1.3.4,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "autolighthouse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
